# rattles

./: Cargo.toml  README.md
examples/: no_std.rs  ratatui.rs  showcase.rs
src/: macros.rs
